# mimic

./: .gitignore  README.md  install.sh  pyproject.toml
docs/: agent-security.md  dpop.md  harnesses.md  pinning.md
mimic/: __init__.py  agent.py  cli.py  codegen.py  control.py  extract.py  mcp_adapter.py  proxy.py  session.py  unpin.py
mimic/sources/: __init__.py  har.py  mitm.py
tests/: test_agent.py  test_capture_quality.py  test_cli.py  test_cli_capture_quality.py  test_control.py  test_har.py  test_mcp_adapter.py  test_mitm.py  test_prompt_budget.py  test_proxy.py  test_session_scope.py
tests/fixtures/: sample.har
