[project]
name = "mimic-client"
version = "0.1.0"
description = "Intercept any app and call it from Python like a library — AI writes the client."
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Divy Srivastava", email = "me@littledivy.com" }]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
capture = ["mitmproxy>=10"]
agent = ["mcp>=1,<2"]

[project.scripts]
mimic = "mimic.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mimic*"]
